foswiki (1.0.4-1) unstable; urgency=low

  * upgrade to foswiki 1.0.4
  * added Warning to configure Extension installer to _not_ use it

 -- Sven Dowideit <SvenDowideit@fosiki.com>  Fri, 20 Mar 2009 09:53:40 +0100

foswiki (1.0.0-1) unstable; urgency=low

  * migrate twiki packaging to foswiki fork to avoid trademark issues

 -- Sven Dowideit <SvenDowideit@fosiki.com>  Fri, 09 Jan 2009 09:53:40 +0100