@@ -4,21 +4,21 @@ if [ -e /tmp/build_deb ]; then
 	echo '/tmp/build_deb already exists, please move aside'
 	exit -1;
 fi
-if [ ! -e Foswiki-1.0.0.tgz ]; then
-	echo 'need Foswiki-1.0.0.tgz file to build'
+if [ ! -e Foswiki-1.0.4.tgz ]; then
+	echo 'need Foswiki-1.0.4.tgz file to build'
 	exit -1;
 fi
 
 mkdir /tmp/build_deb
 cp -r debian /tmp/build_deb/
-cp Foswiki-1.0.0.tgz /tmp/build_deb/foswiki_1.0.0.orig.tar.gz
+cp Foswiki-1.0.4.tgz /tmp/build_deb/foswiki_1.0.4.orig.tar.gz
 
 cd /tmp/build_deb
-tar zxvf /tmp/build_deb/foswiki_1.0.0.orig.tar.gz
+tar zxvf /tmp/build_deb/foswiki_1.0.4.orig.tar.gz
 
 #add * to allow for -beta, -auto etc
-mv /tmp/build_deb/Foswiki-1.0.0*/ /tmp/build_deb/foswiki-1.0.0/
-cd /tmp/build_deb/foswiki-1.0.0
+mv /tmp/build_deb/Foswiki-1.0.4*/ /tmp/build_deb/foswiki-1.0.4/
+cd /tmp/build_deb/foswiki-1.0.4
 
 mv ../debian .
 
